--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=warehouse System
+spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse_db
+spring.datasource.username=rustam
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.flyway.baseline-on-migrate=true
